# github_actions_ci_cd_demo

./: Makefile  README.md  pyproject.toml
.github/workflows/: actions.yml
tests/units/: test_area.py
