[tool.poetry]
name = "github-actions-ci-cd-demo"
version = "0.1.0"
description = ""
authors = ["personal <griffj147@gmail.com>"]
readme = "README.md"
packages = [{include = "github_actions_ci_cd_demo"}]

[tool.poetry.dependencies]
python = "^3.10.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
